--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-hook/media-query": "^1.1.1",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.6.4",
     "json-server": "^0.17.4",
