--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
+    "axios": "^1.6.5",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.6.4",
     "json-server": "^0.17.4",
