--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "react-toastify": "^10.0.4",
     "recharts": "^2.10.3",
     "sort-by": "^0.0.2",
     "swiper": "^11.0.5"
