--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@react-hook/media-query": "^1.1.1",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.3",
     "sort-by": "^0.0.2",
